change color the body

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
+<html lang="fr">
 <head>
 <title>MicroCap</title>
 <meta charset="utf-8">
