--- a/index.html
+++ b/index.html
@@ -30,23 +30,26 @@
   <h1>Micro Capital: Les Entrepreneurs Solidaires</h1>
   <h2>"Se Former, S'investir, Puis investir"</h2>
 </div>
-  <div class="container to1">
-  <div class="row">
+  <div class="container">
+  <div class="row ">
     <div class="col-xs-12 col-md-4 blg">
       <center><h5>Vous êtes un INVESTISEUR?</h5></center>
-      <p>
+      <img src="images/invest.jpg" alt="investir" />
+     <figcaption id="blg1" class="hidden-xs bl1">
+      <center><h5>Vous êtes un INVESTISEUR?</h5></center>
         Profitez du système de gestion de risque de microcap
         pour investir sereinement aux côtés de nos entrepreneures quelque soit la phase du projet. <br>
         Nous vous offrons: <br>
         &nbsp; *Une pépinière de projets viabilisée.<br>
         &nbsp; *Les garanties sur capital investies.<br>
         &nbsp; *Des rendements très attrayants.<br>
-      </p>
-
+      </figcaption>
     </div>
     <div class="col-xs-12 col-md-4 blg">
-    <center>  <h5>Vous êtes un ENTREPRENEUR?</h5></center>
-      <p>
+      <center><h5>Vous êtes un ENTREPRENEUR?</h5></center>
+        <img src="images/entre.jpg" alt="entreprendre" />
+      <figcaption id="blg2" class="hidden-xs bl1">
+        <center><h5>Vous êtes un ENTREPRENEUR?</h5></center>
         Vous avez certainement déjà la notion de Gestion de la trésorerie et ce n'est pas toujours facile.<br>
         Le service <strong>MICROCAP</strong> vous garantie la solution appropriée au moment le plus opportun.
         Le recours ultime pour les moments difficiles les phases de votre parcours où: <br>
@@ -56,11 +59,13 @@
         Les sytèmes de solidarités ont fait leurs preuves déjà dans la santé et le chômage.<br>
         <strong>Microcap</strong> est le système de solidarité pour l'entreprenariat, une architecture et concept
         innovant qui allie efficacités, sécurités et convivialité.
-      </p>
+      </figcaption>
     </div>
     <div class="col-xs-12 col-md-4 blg">
-    <center>  <h5>Souhaitez vous entreprendre Aujourd'hui <br>ou Demain?</h5></center>
-      <p>
+      <center><h5>Souhaitez vous entreprendre Aujourd'hui <br>ou Demain?</h5></center>
+      <img src="images/dem.jpg" alt="today" />
+      <figcaption id="blg3" class="hidden-xs bl1">
+        <center><h5>Souhaitez vous entreprendre Aujourd'hui <br>ou Demain?</h5></center>
         Le Chemin du Combattant classique vous attend:<br>
         &nbsp; *Rediger votre Projet.<br>
         &nbsp; *Trouver des fonds propres.<br>
@@ -70,8 +75,7 @@
         &nbsp; *Découvrir Progressivement l'entrepreneuriat.<br>
         &nbsp; *Rencontrer vos futurs associés et clients.<br>
         &nbsp; *Se former à l'entreprenariat par la pratique en participant aux projets d'autres entrepreneurs.<br>
-      </p>
-
+      </figcaption>
     </div>
   </div>
 </div>
