--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         Profitez du système de gestion de risque de microcap
         pour investir sereinement aux côtés de nos entrepreneures quelque soit la phase du projet. <br>
         Nous vous offrons: <br>
-        &nbsp; *Une pépinière de projets viabilisée.<br>
-        &nbsp; *Les garanties sur capital investies.<br>
+        &nbsp; *Une pépinière de projets viabilisés.<br>
+        &nbsp; *Les garanties sur capital investi.<br>
         &nbsp; *Des rendements très attrayants.<br>
       </figcaption>
     </div>
@@ -55,10 +55,10 @@
         Le recours ultime pour les moments difficiles les phases de votre parcours où: <br>
         &nbsp; *Aucun business Angel ne s'interesse à vous. <br>
         &nbsp; *Aucune banque ne peut vous accompagner. <br>
-        &nbsp; *Aucune subvention ou aides vous correspond. <br>
-        Les sytèmes de solidarités ont fait leurs preuves déjà dans la santé et le chômage.<br>
+        &nbsp; *Aucune subvention ou Aide ne vous correspond. <br><br>
+        Les sytèmes de solidarité ont fait leurs preuves déjà dans la santé et le chômage.<br>
         <strong>Microcap</strong> est le système de solidarité pour l'entreprenariat, une architecture et concept
-        innovant qui allie efficacités, sécurités et convivialité.
+        innovant qui allie efficacité, sécurité et convivialité.
       </figcaption>
     </div>
     <div class="col-xs-12 col-md-4 blg">
@@ -69,7 +69,7 @@
         Le Chemin du Combattant classique vous attend:<br>
         &nbsp; *Rediger votre Projet.<br>
         &nbsp; *Trouver des fonds propres.<br>
-        &nbsp; *Immatriculer votre société au RCS.<br>
+        &nbsp; *Immatriculer votre société au RCS.<br><br>
         Tout ce qu'il faut pour vous préparer au plus important, conquérir les premiers clients alors
         la plateforme microcapital est l'outil idéal pour:<br>
         &nbsp; *Découvrir Progressivement l'entrepreneuriat.<br>
