--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         Le recours ultime pour les moments difficiles les phases de votre parcours où: <br>
         &nbsp; *Aucun business Angel ne s'interesse à vous. <br>
         &nbsp; *Aucune banque ne peut vous accompagner. <br>
-        &nbsp; *Aucune subvention ou Aide ne vous correspond. <br><br>
+        &nbsp; *Aucune subvention ou Aide ne vous correspond. <br>
         Les sytèmes de solidarité ont fait leurs preuves déjà dans la santé et le chômage.<br>
         <strong>Microcap</strong> est le système de solidarité pour l'entreprenariat, une architecture et concept
         innovant qui allie efficacité, sécurité et convivialité.
