change the design and fonts

--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
       <h1>Micro Capital: Les Entrepreneurs Solidaires</h1>
       <h2>"Se Former, S'investir, Puis investir"</h2>
     </div>
-    	<div class="col-lg-3">
+    	<div class="col-lg-4">
     				<div class="cuadro_intro_hover ">
 						<p style="text-align:center;">
 						<center><img src="images/invest.jpg" class="img-responsive" alt=""></center>
 						</p>
-            <h3 style="text-align:center; color:white; margin-top:55px;">Vous êtes un INVESTISSEUR?</h3>
-            <p style="text-align:center;">Profitez du système de gestion de risque de microcap
-            pour investir sereinement aux côtés de nos entrepreneures quelque soit la phase du projet.....</p>
+            <h3 style="text-align:center; color:white; margin-top:65px;">Vous êtes un INVESTISSEUR?</h3>
+            <p style="text-align:left;">Profitez du système de gestion de risque de microcap.<br>
+            Pour investir sereinement aux côtés de nos entrepreneures quelque soit la phase du projet.....</p>
 						<div class="caption">
 							<div class="blur"></div>
 							<div class="caption-text">
@@ -142,19 +142,19 @@
 					</div>
 
 	    </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
         			<div class="cuadro_intro_hover ">
 						<p style="text-align:center; ">
 							<center>	<img src="images/entre.jpg" class="img-responsive" alt=""></center>
 						</p>
             <h3 style="text-align:center; color:white;margin-top:25px;">Vous êtes un Entrepreneur?</h3>
-            <p style="text-align:center;">Vous avez certainement déjà la notion de Gestion de la trésorerie et ce n'est pas toujours facile......</p>
+            <p style="text-align:left;">Vous avez certainement déjà la notion de Gestion de la trésorerie et ce n'est pas toujours facile......</p>
 						<div class="caption">
 							<div class="blur"></div>
 							<div class="caption-text">
 								<h3 class="to1">Vous êtes un ENTREPRENEUR?</h3>
 								<p>Vous avez certainement déjà la notion de Gestion de la trésorerie et ce n'est pas toujours facile.<br>
-                  Le service <strong>MICROCAP</strong> vous garantie la solution appropriée au moment le plus opportun où:<br>
+                  Le service <strong>MICROCAP</strong> vous garantie la solution appropriée au moment le plus opportun où:<br><br>
                   &nbsp; *Aucun business Angel ne s'interesse à vous. <br>
                   &nbsp; *Aucune banque ne peut vous accompagner. <br>
                   &nbsp; *Aucune subvention ou Aide ne vous correspond. <br>
@@ -167,13 +167,13 @@
 					</div>
 
 	    </div>
-        <div class="col-lg-3">
+        <div class="col-lg-4">
         			<div class="cuadro_intro_hover ">
 						<p style="text-align:center;">
 					<center><img src="images/dem.jpg" class="img-responsive" alt=""></center>
 						</p>
             <h3 style="text-align:center; color:white;">Entreprendre Aujourd'hui ou Demain?</h3>
-            <p style="text-align:center;">Vous avez certainement déjà la notion de Gestion de la trésorerie et ce n'est pas toujours facile......</p>
+            <p style="text-align:left;">Le Chemin du Combattant classique vous attend......</p>
 						<div class="caption">
 							<div class="blur"></div>
 							<div class="caption-text">
@@ -193,23 +193,7 @@
 					</div>
 
 	    </div>
-        <div class="col-lg-3">
-        			<div class="cuadro_intro_hover ">
-						<p style="text-align:center; ">
-							<img src="http://placehold.it/1000x330" class="img-responsive" alt="">
-						</p>
-						<div class="caption">
-							<div class="blur"></div>
-							<div class="caption-text">
-								<h3 class="to1">THIS IS H3</h3>
-								<p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
-								<!--<a class=" btn btn-default" href="http://mispicaderos.com"><span class="glyphicon glyphicon-plus"> INFO</span></a>-->
-							</div>
-						</div>
-					</div>
 
-	    </div>
-    </div>
 
 <footer>
   <div class="container">
